--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,49 +1,7 @@
 {% extends "base.html" %}
-{% load static %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div class="jumbotron bg-light p-5 rounded">
-                <h1 class="display-4 text-center">
-                    <span role="img" aria-label="money bag">💰</span>
-                    OurFinanceTracker
-                </h1>
-                <p class="lead text-center">Your complete solution for personal financial management.</p>
-                <hr class="my-4">
-                <p class="text-center">Register to start tracking income, expenses and account balances.</p>
-                <div class="text-center">
-                    <a class="btn btn-primary btn-lg me-2" href="{% url 'accounts:login' %}" role="button">
-                        <i class="bi bi-box-arrow-in-right"></i> Log In
-                    </a>
-                    <a class="btn btn-outline-primary btn-lg" href="{% url 'accounts:signup' %}" role="button">
-                        <i class="bi bi-person-plus"></i> Sign Up
-                    </a>
-                </div>
-            </div>
-
-            <!-- Funcionalidades -->
-            <div class="row mt-5">
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-graph-up display-4 text-primary"></i>
-                    <h4 class="mt-3">Intuitive Dashboard</h4>
-                    <p>Visualise your financial data with clear charts and metrics.</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-shield-check display-4 text-success"></i>
-                    <h4 class="mt-3">Secure and Private</h4>
-                    <p>Your data is protected with best security practices.</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <i class="bi bi-cloud-arrow-up display-4 text-info"></i>
-                    <h4 class="mt-3">Import/Export</h4>
-                    <p>Import data from Excel or export your reports easily.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{% include "core/partials/lazy_instructions.html" %}
 {% endblock %}
