--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,8 @@
 
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load widget_tweaks %}
 
-{% block title %}Login - OurFinanceTracker{% endblock %}
+{% block title %}Login - OurFinanceTracker{% endblock title %}
 
 {% block content %}
 <div class="container mt-5">
@@ -21,7 +21,7 @@
                     
                     {% if messages %}
                         {% for message in messages %}
-                            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                            <div class="alert alert-{{ message.tags }}">{{ message|escape }}</div>
                         {% endfor %}
                     {% endif %}
                     
@@ -56,8 +56,8 @@
             </div>
         </div>
     </div>
-</div>
-{% endblock %}
+  </div>
+{% endblock content %}
 
 {% block extra_js %}
 <script nonce="{{ request.csp_nonce }}">
@@ -68,4 +68,4 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 });
 </script>
-{% endblock %}
+{% endblock extra_js %}
